--- a/frontend/src/components/SalesCard/styles.css
+++ b/frontend/src/components/SalesCard/styles.css
@@ -2,11 +2,10 @@
   background-color: #283142;
   border-radius: 10px;
   padding: 30px 10px;
-
 }
 
 .dsmeta-sales-title {
-  color: #676FFF;
+  color: #676fff;
   font-size: 24px;
   margin-bottom: 20px;
 }
@@ -14,16 +13,15 @@
 .dsmeta-form-control-container {
   margin-bottom: 16px;
   max-width: 300px;
-
 }
 
 .dsmeta-form-control {
   width: 100%;
   height: 46px;
-  background-color: #1B2531;
+  background-color: #1b2531;
   border: 1px solid #384459;
   border-radius: 5px;
-  color: #9AAABE;
+  color: #9aaabe;
   padding: 0 20px;
   font-size: 18px;
 }
@@ -31,34 +29,34 @@
 .dsmeta-sales-table {
   width: 100%;
   border-spacing: 0;
-  border-collapse: collapse;  
+  border-collapse: collapse;
 }
 
 .dsmeta-sales-table thead {
   height: 55px;
   font-size: 16px;
-  color: #E9E9E9;
+  color: #e9e9e9;
   font-weight: 700;
 }
 
 .dsmeta-sales-table tbody {
   font-size: 14px;
-  font-weight: 400;  
-  color: #CFCFCF;
+  font-weight: 400;
+  color: #cfcfcf;
   text-align: center;
 }
 
 .dsmeta-sales-table tbody tr {
   height: 74px;
-  border-top: 1px solid #5F6E82;
+  border-top: 1px solid #5f6e82;
 }
 
-.dsmeta-sales-table tbody tr:hover >td {
+.dsmeta-sales-table tbody tr:hover > td {
   background-color: #384459;
 }
 
 .dsmeta-sales-table tbody tr:nth-child(odd) {
-  background-color: #242C3B;
+  background-color: #242c3b;
 }
 
 .dsmeta-red-btn-container {
@@ -89,12 +87,10 @@
   .dsmeta-sales-table tbody {
     font-size: 18px;
   }
-
 }
 
 @media (min-width: 992px) {
   .show992 {
     display: table-cell;
   }
-
 }
